# prompt-valet

./: .gitignore  PHASE_CHECKLIST.md  README.md  codex_watcher.py  copyparty.service  install_prompt_valet.sh  prompt-valet-tree-builder.service  prompt-valet-tree-builder.timer  prompt-valet-watcher.service  pyproject.toml  rebuild_inbox_tree.py
.github/workflows/: ci.yml
config/: codex-runner.yaml  prompt-valet.yaml
configs/: codex-runner.yaml  prompt-valet.yaml
docs/: Architecture.md  Bible.md  Config_Spec.md  Design_Philosophy.md  Filesystem.md  Future_Work.md  Phase2_Debrief.md  Phase_Roadmap.md  Prompt_Valet_Overview.md  configuration.md  installer_contract.md  job_queue_overview.md  operations.md  p1-c3-api.md  phase-roadmap.md  work_queue_phase2_design.md
docs/AGENT_RUNS/: codex-run-20251205-1216-3291.md  codex-run-20251205-1623-5e5d.md  codex-run-20251205-2055-58.md  (+48 more)
ops/env/: pv.env.example  (+1 more)
prompt_valet/: __init__.py
schemas/: job_record.schema.json
scripts/: codex_watcher.py  pv_api.py  pv_jobs.py  pv_ui.py  queue_runtime.py  rebuild_inbox_tree.py
systemd/: copyparty.service
tests/: test_basic_ci.py  test_codex_watcher_config_root.py  test_e2e_dry_run.py  test_git_preflight.py  test_git_sync.py  test_inbox_lifecycle.py  test_p1_c3_api.py  test_p1_c4_job_submission.py  test_p1_c5_logs_and_abort.py  test_pv_jobs.py  test_queue_runtime.py  test_queue_watcher.py  test_rebuild_inbox_tree_upstream.py  test_repo_resolution.py  test_ui_api_contract.py  test_ui_boot.py  test_ui_client.py  test_ui_formatting.py  test_ui_strobe.py  test_ui_submit_panel.py
(+39 files in other folders)
