[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-valet"
version = "0.1.0"
description = "Control plane helpers for Prompt Valet."
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "python-multipart",
    "httpx",
    "nicegui",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
]


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
include = ["prompt_valet*"]
