[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-valet"
version = "0.1.0"
description = "Control plane helpers for Prompt Valet."
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.127.0",
    "uvicorn==0.40.0",
    "pyyaml",
    "python-multipart",
    "httpx==0.28.1",
    "nicegui==3.4.1",
    "starlette==0.50.0",
    "pydantic==2.12.5",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "pytest",
]


[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.setuptools.packages.find]
include = ["prompt_valet*"]
